--- a/compose.yaml
+++ b/compose.yaml
@@ -14,4 +14,5 @@ services:
       - /var/lib/postgresql/data:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
+      - .:/workspace
     command: postgres -c 'max_connections=500' -c 'logging_collector=on'
