--- a/compose.yaml
+++ b/compose.yaml
@@ -11,7 +11,7 @@ services:
       POSTGRES_DB: postgres
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - /var/lib/postgresql/data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
       - .:/workspace
